--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                 });
             }, 500);
         });
-        </script
+        </script>
     </head>
     <body>
         <div class="container">
